distribution.

Much of the traditional function of a news file is now better addressed
by browsing the comments in the revision history.  This file will focus
on user-visible changes.

== Repository head ==

It is now possible to unpeer refclocks using a type/unit specification
rather than a magic IP address.  This was the last obligatory use of
magic IP addresses in the configuration grammar.

== 2017-10-10: 1.0.0 ==

This is the 1.0 release.
It has been a long road, getting from there to here.

The code size has been further reduced, to 55KLOC.

A bug inherited from Classic that could cause bad jitter from bad
peers to be incorrectly zeroed, producing erratic or slow startup, has
been fixed.

The dependency of local refclocks returning 4-digit years on
pre-synchronization to a network peer has been removed.  It is
this possible to run in a fully-autonomous mode using multiple
refclocks and no network peers.

ntpmon now reports units on time figures.

ntpq now reports a count of Mode 6 messages received under sysstats.

You can now turn off restriction flags with an _unrestrict_ statement
that takes arguments exactly like a _restrict_, except that with no
argument flags it removes any filter rule associated with the
address/mask (as opposed to creating one with unrestricted
access). This is expected to be useful mainly with the "ntpq :config"
command.

Builds are fully reproducible; see SOURCE_DATE_EPOCH and BUILD_EPOCH.

== 2017-03-21: 0.9.7 ==

The code size has been further reduced, to 60KLOC.

A shell script, buildprep, has been added to the top level source directory.
It prepares your system for an NTPsec source build by installing all required
dependencies on the build host.

Extra digits of precision are now output in numerous places.  The
driftfile now output 6 digits past the decimal point instead of 3.  The
stats files now output 9 digits past the decimal point instead of 6 for
some fields. ntpq and ntpmon also report extra digits of precision in